Add styling and deploy

--- a/src/404.html
+++ b/src/404.html
@@ -3,6 +3,17 @@
 
 <head>
     <title>Fractions</title>
+    <style>
+        #numerator,
+        #denominator {
+            font-size: 1.5rem;
+            text-align: center;
+        }
+        
+        #numerator {
+            border-bottom: 1px solid black;
+        }
+    </style>
     <script>
         function generate() {
             var pathname = window.location.pathname;
